9080 - added min-height for the headlines, to prevent wrapping and different sizes of cards

--- a/src/_scss/pages/homepage/_readyToGetStarted.scss
+++ b/src/_scss/pages/homepage/_readyToGetStarted.scss
@@ -28,6 +28,12 @@
       @media (min-width: $medium-screen) {
         margin-bottom: 0;
       }
+      .headline {
+        min-height: rem(60);
+        @media (min-width: $medium-screen) {
+          min-height: rem(90);
+        }
+      }
     }
   }
 
